<resources>
    <string name="app_name">Kew</string>

    <string name="action_settings">Settings</string>

    <!-- Tab Strings -->

    <string name="home">Home</string>
    <string name="places">Places</string>
    <string name="discover">Discover</string>
    <string name="map">Map</string>
    <string name="Settings">Settings</string>

    <string name="more_to_discover">More to Discover:</string>

    <!-- Home Tab String -->

    <!-- Place Tab String -->

    <string name="place_information">Information</string>
    <string name="place_map">Map</string>

    <string name="error_add_map_info">There isn\'t map information.</string>

    <!-- Discover Tab String -->

    <string name="discover_discovered">Discovered:</string>
    <string name="discover_entry_more_info">More Info</string>
    <string name="discover_entry_back">Back</string>

    <string name="discover_hide_information">Hide information</string>

    <!-- Common String -->
    <string name="now_loading_data">Loading ...</string>
    <string name="failed_loading_data">Data not loaded, please check your internet connection.</string>
    <string name="dialog_ok">OK</string>

    <!-- Dialogs -->
    <string name="warning_dialog_bluetooth_title">Bluetooth not enabled</string>
    <string name="warning_dialog_bluetooth_message">Please enable bluetooth in settings and restart this application.</string>
    <string name="warning_dialog_bluetooth_le_title">Bluetooth LE not available</string>
    <string name="warning_dialog_bluetooth_le_message">Sorry, this device does not support Bluetooth LE.</string>
    <string name="warning_dialog_network_connectivity">You are not connected to the Internet. Please check your connectivity.</string>

    <!-- Notifications -->
    <string name="notification_discover_new_region_title">Discover Kew</string>
    <string name="notification_discover_new_region_content">You have entered a new Discovery Zone.</string>

    <!-- Beacon Relation -->
    <string name="beacon_region_kew_garden">Kew Garden Region</string>

    <!-- Map Tab -->
    <string name="no_entries_for_map">There isn\'t map data.</string>

    <string name="map_region_kew">Kew</string>
    <string name="map_region_wakehurst">Wakehurst</string>


    <!-- Menu Strings -->
	
	<string name="menu_info">Info</string>
    <string name="menu_explore">Explore</string>

    <string name="menu_location">Location</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>

    <string name="menu_test_dot3sdk">Test Dot3 SDK</string>
	
    <!-- geofencing and location - TODO: rework string usage -->

    <string name="title_activity_show_geofence_transitions">ShowGeofenceTransitionsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <string name="geofence_list_empty">Geofence list is empty. No geofence monitoring.</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>


    <!-- Location -->
    <string name="location_updated_message">Location updated</string>
    <string name="title_activity_maps">Map</string>
    <!-- AK -->

	<string name="show_view1">Show viewEntry 1</string>
    <string name="show_view2">Show viewEntry 2</string>

    <string name="show_topviews">Show top views</string>
    <string name="hide_topviews">Hide top views</string>

	<string name="intro_message">
        <![CDATA[
        
            
            Kew app.
            Kew app.
            Kew app.
            Kew app.
            Kew app.
            Kew app.
            Kew app.
            Kew app.
            Kew app.

        
        ]]>
    </string>
</resources>
