<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Loading Layout -->

    <LinearLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/now_loading_data"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- Header -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/map_header"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvMapTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tvMapDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <!-- Switching Tab View -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/map_switch_color"
            android:paddingBottom="1dp">

            <Button
                android:id="@+id/btnKew"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/map_switch_color"
                android:text="@string/map_region_kew"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnWakehurst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/map_region_wakehurst"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/map_switch_color" />
        </LinearLayout>

        <!-- Map Viewer -->

        <fragment
            android:id="@+id/mapViewer"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>